apps/memes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memes
  labels:
    app.kubernetes.io/name: memes
    app.kubernetes.io/part-of: memes
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/warn: restricted
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
