apps/memes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memes
  labels:
    app.kubernetes.io/name: memes
    app.kubernetes.io/part-of: memes
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/enable-access-log: 'false'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - memes.soyspray.vip
    secretName: prod-cert-tls
  rules:
  - host: memes.soyspray.vip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memes
            port:
              name: http
